the_project/manifests/broadcaster_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-broadcaster-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: todo-broadcaster
  template:
    metadata:
      labels:
        app: todo-broadcaster
    spec:
      containers:
        - name: todo-broadcaster
          image: todo-broadcaster
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"
