the_project/manifests/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
