the_project/manifests/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres-svc
  namespace: project
spec:
  selector:
    app: todo-postgres
  ports:
  - port: 5432
    targetPort: 5432
